--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,17 +1,3 @@
-.homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
-}
-
-.directory-menu {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
 .menu-item {
   min-width: 30%;
   height: 240px;
@@ -20,7 +6,24 @@
   align-items: center;
   justify-content: center;
   border: 1px solid black;
-  margin: 0 7.5px 15px;
+	margin: 0 7.5px 15px;
+
+	&:hover {
+		cursor: pointer;
+
+		& .background-image {
+			transform: scale(1.1);
+			transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95)
+		}
+
+		& .content {
+			opacity: 0.9;
+		}
+	}
+
+	&.large{
+		height: 400px;
+	}
 
   &:first-child {
     margin-right: 7.5px;
@@ -30,6 +33,12 @@
     margin-left: 7.5px;
   }
 
+	.background-image {
+		width: 100%;
+		height: 100%;
+			background-position: center;
+			background-size: cover;
+	}
   .content {
     height: 90px;
     padding: 0 25px;
@@ -37,10 +46,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+		border: 1px solid black;
+		background-color: #fff;
+		opacity: 0.7;
+		position: absolute;
 
     .title {
-      font-weight: bold;
+			font-weight: bold;
+			margin: 0;
       margin-bottom: 6px;
       font-size: 22px;
       color: #4a4a4a;
